2008-10-19  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	  Update and document format.

2008-10-17  Stefan Kost  <ensonic@users.sf.net>

	* devhelp2.xsd:
	* devhelp2.xsl:
	  Add new language attribute and use "c" here.

2008-10-16  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mktmpl.in:
	  Small comment cleanup and loud thinking in TODO :)

2008-10-15  Stefan Kost  <ensonic@users.sf.net>

	patch by: Jeffrey Stedfast <fejj@novell.com>

	* examples/Makefile.am:
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	   Allow versioned TARGET_DIR. Fixes #554718.

2008-10-13  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  planning.

	* doc/gtkdoc.dot:
	  Document workflow
	* devhelp2.xsl:
	  Add support for enums/flags in devhelp index.

	* gtkdoc-mkdb.in:
	  Support annotations. Fix missing roles.

	* tests/annotations/docs/tester-docs.xml:
	* tests/annotations/src/tester.c:
	* tests/annotations/src/tester.h:
	* tests/bugs/docs/tester-sections.txt:
	* tests/gobject/docs/tester-docs.xml:
	  Update new syntax.

2008-10-11  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* tests/Makefile.am:
	* tests/annotations.sh:
	* tests/annotations/Makefile.am:
	* tests/annotations/docs/Makefile.am:
	* tests/annotations/docs/tester-docs.xml:
	* tests/annotations/docs/tester-sections.txt:
	* tests/annotations/src/Makefile.am:
	* tests/annotations/src/tester.c:
	* tests/annotations/src/tester.h:
	  Add testcases for gir annotation.

2008-10-03  Stefan Kost  <ensonic@users.sf.net>

	patch by: Matthew Barnes <mbarnes@redhat.com>

	* gtkdoc-scan.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Be more careful with "struct _<struct_name>". Fixes #554833.

2008-10-03  Stefan Kost  <ensonic@users.sf.net>

	patch by: Behdad Esfahbod <behdad@gnome.org>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Add rules to create $(REPORT_FILES). Fixes #552822.

2008-10-03  Stefan Kost  <ensonic@users.sf.net>
