@@ -51,6 +51,7 @@
   </index>
 
   <glossary>
+    <title>Glossary</title>
     <glossdiv id="glossary-X"><title>X</title>
       <glossentry>
         <glossterm><anchor id="glossterm-XML"/>XML</glossterm>
