@@ -1,3 +1,10 @@
+2008-10-20  Stefan Kost  <ensonic@users.sf.net>
+
+	* tests/annotations/docs/tester-docs.xml:
+	* tests/annotations/src/tester.c:
+	* tests/gobject/docs/tester-docs.xml:
+	  Update annotations. Glossary enhancements.
+
 2008-10-19  Stefan Kost  <ensonic@users.sf.net>
 
 	* devhelp2.xsd:
